[package]
name = "node"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
anyhow = "1.0.40"
rand = "0.7.3"
futures = "0.3.15"

config = { path = "../config" }
store = { path = "../store" }
crypto = { path = "../crypto" }
primary = { path = "../primary" }
worker = { path = "../worker" }
consensus = { path = "../consensus" }

alloy = { version = "0.6.1", features = ["full"] }
alloy-signer = "0.6.1"
alloy-rpc-client = "0.6.1"
alloy-primitives = "0.8.11"
alloy-signer-local = { version = "0.6.1",features = ["mnemonic"] }
eyre = "0.6.12"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.22.0"
serde_json = "1.0.132"

[features]
benchmark = ["worker/benchmark", "primary/benchmark", "consensus/benchmark"]

[[bin]]         
name = "benchmark_client"   
path = "src/benchmark_client.rs" 
required-features = ["benchmark"] 